--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.typekit.net/prz2neu.css">
     <link rel="stylesheet" type="text/css" media="screen" href="portfolio.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="fonts.css">
 </head>
 <body>
 
