--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Nina Barraco Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="portfolio.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="fonts.css">
     <script src="main.js"></script>
 </head>
 <body>
