--- a/design.html
+++ b/design.html
@@ -29,53 +29,53 @@
     </nav>
 
 
-    <main class="design">
+    <main class="project-main">
 
-        <div class="design-heading">
-            <div class="heading-line" id="design-line"></div>
-            <h1 class="design-title">design</h1>
-            <p class="subtitle" id="design-subtitle">UX, branding, and print design. And a little development for good measure.</p>
+        <div class="project-main-heading">
+            <div class="heading-line" id="project-line"></div>
+            <h1 class="project-title">design</h1>
+            <p class="subtitle" id="project-main-subtitle">UX, branding, and print design. And a little development for good measure.</p>
         </div>
 
 
-        <div class="design-gallery">
+        <div class="project-gallery">
 
             <div class="project">
-                <img src="images/design/sketch3-background-cropped.png" class="design-image">
+                <img src="images/design/sketch3-background-cropped.png" class="project-image" alt="project one thumbnail">
                 <div class="project-info">
                     <div class="number-group">
                         <div class="number-line"></div>
                         <h3 class="number">01.</h3>
                     </div>
-                    <div class="project-name">
-                        <a href="#" class="design-project-name">Great Blue Orange</a>
+                    <div class="project-text">
+                        <a href="#" class="project-name">Great Blue Orange</a>
                         <p class="project-subtitle">UX/UI & development</p>
                     </div>
                 </div>
             </div>
             <div class="project">
-                <img src="images/design/Annual_Report_2_cropped.png" class="design-image">
+                <img src="images/design/Annual_Report_2_cropped.png" class="project-image" alt="project two thumbnail">
                 <div class="project-info">
                     <div class="number-group">
                         <div class="number-line"></div>
-                        <h3 class="number">01.</h3>
+                        <h3 class="number">02.</h3>
                     </div>
-                    <div class="project-name">
-                        <a href="#" class="design-project-name">Great Blue Orange</a>
-                        <p class="project-subtitle">UX/UI & development</p>
+                    <div class="project-text">
+                        <a href="#" class="project-name">HI Visual Identity System</a>
+                        <p class="project-subtitle">brand & print design</p>
                     </div>
                 </div>
             </div>
             <div class="project">
-                <img src="images/design/postcard4-cropped.png" class="design-image">
+                <img src="images/design/postcard4-cropped.png" class="project-image" alt="project three thumbnail">
                 <div class="project-info">
                     <div class="number-group">
                         <div class="number-line"></div>
-                        <h3 class="number">01.</h3>
+                        <h3 class="number">03.</h3>
                     </div>
-                    <div class="project-name">
-                        <a href="#" class="design-project-name">Great Blue Orange</a>
-                        <p class="project-subtitle">UX/UI & development</p>
+                    <div class="project-text">
+                        <a href="#" class="project-name">Commemorating the Humanities</a>
+                        <p class="project-subtitle">print & packaging design</p>
                     </div>
                 </div>
             </div>
