addition of great blue orange page

--- a/fine-art.html
+++ b/fine-art.html
@@ -41,7 +41,9 @@
             <div class="project-gallery">
     
                 <div class="project">
-                    <img src="images/fine-art/Allie_web.png" class="project-image" alt="project one thumbnail">
+                    <a href="#">
+                        <img src="images/fine-art/Allie_web.png" class="project-image" alt="project one thumbnail">
+                    </a>
                     <div class="project-info">
                         <div class="number-group">
                             <div class="number-line"></div>
@@ -53,7 +55,9 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="images/fine-art/Leaf4.jpg" class="project-image" alt="project two thumbnail">
+                    <a href="#">
+                        <img src="images/fine-art/Leaf4.jpg" class="project-image" alt="project two thumbnail">
+                    </a>
                     <div class="project-info">
                         <div class="number-group">
                             <div class="number-line"></div>
@@ -65,7 +69,9 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="images/fine-art/BookofNames22_web.png" class="project-image" alt="project three thumbnail">
+                    <a href="#">
+                        <img src="images/fine-art/BookofNames22_web.png" class="project-image" alt="project three thumbnail">
+                    </a>
                     <div class="project-info">
                         <div class="number-group">
                             <div class="number-line"></div>
