--- a/design.html
+++ b/design.html
@@ -41,20 +41,24 @@
         <div class="project-gallery">
 
             <div class="project">
-                <img src="images/design/sketch3-background-cropped.png" class="project-image" alt="project one thumbnail">
+                <a href="d-greatblueorange.html">
+                    <img src="images/design/sketch3-background-cropped.png" class="project-image" alt="project one thumbnail">
+                </a>
                 <div class="project-info">
                     <div class="number-group">
                         <div class="number-line"></div>
                         <h3 class="number">01.</h3>
                     </div>
                     <div class="project-text">
-                        <a href="#" class="project-name">Great Blue Orange</a>
+                        <a href="d-greatblueorange.html" class="project-name">Great Blue Orange</a>
                         <p class="project-subtitle">UX/UI & development</p>
                     </div>
                 </div>
             </div>
             <div class="project">
-                <img src="images/design/Annual_Report_2_cropped.png" class="project-image" alt="project two thumbnail">
+                <a href="#">
+                    <img src="images/design/Annual_Report_2_cropped.png" class="project-image" alt="project two thumbnail">
+                </a>
                 <div class="project-info">
                     <div class="number-group">
                         <div class="number-line"></div>
@@ -67,7 +71,9 @@
                 </div>
             </div>
             <div class="project">
-                <img src="images/design/postcard4-cropped.png" class="project-image" alt="project three thumbnail">
+                <a href="#">
+                    <img src="images/design/postcard4-cropped.png" class="project-image" alt="project three thumbnail">
+                </a>
                 <div class="project-info">
                     <div class="number-group">
                         <div class="number-line"></div>
