updated spacing and hi vis id page

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
 
-    <main class="about">
+    <main class="about container">
         <div class="about-heading">
             <div class="heading-line" id="about-line"></div>
             <h1 class="about-title">about</h1>
