--- a/design.html
+++ b/design.html
@@ -29,7 +29,7 @@
     </nav>
 
 
-    <main class="project-main">
+    <main class="project-main container">
 
         <div class="project-main-heading">
             <div class="heading-line" id="project-line"></div>
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="project">
-                <a href="#">
+                <a href="d-hivisid.html">
                     <img src="images/design/Annual_Report_2_cropped.png" class="project-image" alt="project two thumbnail">
                 </a>
                 <div class="project-info">
@@ -65,7 +65,7 @@
                         <h3 class="number">02.</h3>
                     </div>
                     <div class="project-text">
-                        <a href="#" class="project-name">HI Visual Identity System</a>
+                        <a href="d-hivisid.html" class="project-name">HI Visual Identity System</a>
                         <p class="project-subtitle">brand & print design</p>
                     </div>
                 </div>
