--- a/d-hivisid.html
+++ b/d-hivisid.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="portfolio.css">
     <link rel="stylesheet" type="text/css" media="screen" href="fonts.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/prz2neu.css">
 </head>
 <body>
 
@@ -88,14 +89,12 @@
             <div class="hivisid-typeexamples">
                 <div class="hivisid-typecaptions">
                     <p class="oswald-caption">
-                        Oswald 
-                        60pt
+                        <b>Oswald</b><br>
                         For use in headlines
                     </p>
                     <p class="garamond-caption">
-                        Adobe Garamond Pro 
-                        36pt, 24pt
-                        For subtitles and body copy
+                        <b>Adobe Garamond Pro</b><br>
+                        For subtitles & body copy
                     </p>
                 </div>
                 <div class="hivisid-typeusecases">
@@ -104,6 +103,15 @@
                     <p class="hivisid-p-ex">
                         The Institute for the Humanities is a center for innovative, collaborative study in the humanities and arts. Each year we provide fellowships for Michigan faculty, graduate students, and visiting scholars who work on interdisciplinary projects. We also offer a wide array of public and scholarly events, including public lectures, conferences, art exhibitions, and performances.
                     </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="grey-background">
+            <div class="hivisid-color container">
+                <h2 class="proj-subtitle" id="hivisid-color-subtitle"><span class="roman-numeral">II.</span> Color</h2>
+                <div id="hivisid-color-p">
+                    <p class="proj-body-copy">Bright gold and teal come together with subtle taupe and navy to create a visual discourse that is both scholarly and engaging.</p>
                 </div>
             </div>
         </div>
