nearly done hivisid page

--- a/d-hivisid.html
+++ b/d-hivisid.html
@@ -115,6 +115,91 @@
                 </div>
             </div>
         </div>
+
+        <div class="hivisid-colorstudies container">
+            <div class="squares">
+                <div class="gold-square-group">
+                    <div class="gold-square hivisid-square"></div>
+                    <p class="color-square-specs">
+                        CMYK: 0, 43, 95, 0<br>
+                        RGB: 249, 160, 39<br>
+                        #f9a027
+                    </p>
+                </div>
+                <div class="teal-square-group">
+                    <div class="teal-square hivisid-square"></div>
+                    <p class="color-square-specs">
+                        CMYK: 53, 12, 35, 0<br>
+                        RGB: 123, 182, 172<br>
+                        #7bb6ac
+                    </p>
+                </div>
+                <div class="taupe-square-group">
+                    <div class="taupe-square hivisid-square"></div>
+                    <p class="color-square-specs">
+                        CMYK: 44, 44, 58, 10<br>
+                        RGB: 141, 126, 106<br>
+                        #8d7e6a
+                    </p>
+                </div>
+                <div class="navy-square-group">
+                    <div class="navy-square hivisid-square"></div>
+                    <p class="color-square-specs">
+                        CMYK: 100, 86, 41, 42<br>
+                        RGB: 0, 39, 76<br>
+                        #00274c
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="hivisid-smartdynamic container">
+            <h2 class="proj-subtitle" id="hivisid-smartdynamic-subtitle">Smart & Dynamic</h2>
+            <div id="hivisid-smartdynamic-p">
+                <p class="proj-body-copy">The resulting system is flexible, and was applied to a number of materials, from the bi-annual trifold of event listings to the 2017-2018 annual report.</p>
+            </div>
+        </div>
+
+        <div class="hivisid-gallery">
+            <div class="hivisid-annualreport">
+                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_2.png" class="hivisid-pic" id="annual-report-2" alt="Annual Report Spread">
+                <div class="annual-report-covers">
+                    <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_1.png" class="hivisid-pic" id="annual-report-1" alt="Annual Report Cover">
+                    <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_6.png" class="hivisid-pic" id="annual-report-6" alt="Annual Report Back Cover">
+                </div>
+                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_4.png" class="hivisid-pic" id="annual-report-4" alt="Annual Report Spread">
+                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_5.png" class="hivisid-pic" id="annual-report-5" alt="Annual Report Spread">
+            </div>
+            <div class="hivisid-trifold">
+                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Trifold_front.png" class="hivisid-pic" id="trifold-front" alt="Trifold">
+                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Trifold_outside_unfolded.png" class="hivisid-pic" id="trifold-unfolded" alt="Trifold Unfolded">
+            </div>
+        </div>
+
+        <div class="hivisid-yeartheme container">
+            <h2 class="proj-subtitle" id="hivisid-yeartheme-subtitle">For 2018-2019, we decided to extend this visual identity system to the institute’s annual year theme.</h2>
+            <div id="hivisid-yeartheme-p">
+                <p class="proj-body-copy">Every year the Institute for the Humanities creates a year-long theme that much of the artistic, cultural, and intellectual happenings on campus revolve around. The 2018-2019 year was designated the Year of Humanities and Environments. In addition to a logo based off of this system, I designed a series of street pole banners. I utilized a set of illustrations to convey different notions of the human-environment relationship—built, natural, industry, and renewable energy.</p>
+            </div>
+        </div>
+
+        <div class="grey-background hivisid-logos-background">
+            <div class="hivisid-logos">
+                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Humanities_and_Environments_Logo_black.jpg" class="hivisid-pic" id="yeartheme-black" alt="Year Theme Logo Black">
+                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Humanities_and_Environments_Logo_reverse.jpg" class="hivisid-pic" id="yeartheme-reverse" alt="Year Theme Logo Reverse">
+            </div>
+        </div>
+
+        <div class="hivisid-yeartheme-2 container">
+            <p class="proj-body-copy" id="hivisid-yeartheme-p2">Type and image interact seamlessly, two seemingly disparate elements that together create an environment of their own. In addition, these illustrations allude to various topics that the institute’s programming covered under this theme.</p>
+        </div>
+
+        <div class="hivisid-yeartheme-banners">
+            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners1_web.png" class="hivisid-banner" id="hivisid-banner-gold" alt="Year Theme Banner Gold">
+            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners2_web.png" class="hivisid-banner" id="hivisid-banner-teal" alt="Year Theme Banner Teal">
+            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners3_web.png" class="hivisid-banner" id="hivisid-banner-taupe" alt="Year Theme Banner Teal">
+            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners4_web.png" class="hivisid-banner" id="hivisid-banner-navy" alt="Year Theme Banner Teal">
+        </div>
     
     <script src="portfolio.js"></script>
 </body>
