commem page and images

--- a/d-hivisid.html
+++ b/d-hivisid.html
@@ -27,6 +27,21 @@
             </div>
         </div>
     </nav>
+
+    <!-- <nav class="topnav">
+        <a href="index.html" class="initials">nb</a>
+        <div class="nav-container">
+            <div class="topnav-icon" onclick="clickNav(this)">
+                <svg id="hamburger" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Hamburger icon</title><path d="M200.62,54.16H.86V36H200.62Zm0,58.11H.86V94.11H200.62Zm0,58.11H.86V152.22H200.62Z"/></svg>
+                <svg id="x" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1 copy 2</title><path d="M114.08,100,201,186.93,187.73,200,101,113.09,14.08,200,.8,186.93,87.73,100,.8,13.09,14.08,0,101,86.73,187.73,0,201,13.09Z"/></svg>
+            </div>
+            <div class="topnav-links" id="topnav-links-js">
+                <a href="design.html" class="topnav-link">Design</a>
+                <a href="fine-art.html" class="topnav-link">Fine Art</a>
+                <a href="about.html" class="topnav-link">About</a>
+            </div>
+        </div>
+    </nav> -->
         
     <header class="proj-header container">
         <div class="hivisid-header-group">
@@ -200,6 +215,27 @@
             <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners3_web.png" class="hivisid-banner" id="hivisid-banner-taupe" alt="Year Theme Banner Teal">
             <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners4_web.png" class="hivisid-banner" id="hivisid-banner-navy" alt="Year Theme Banner Teal">
         </div>
+
+        <div class="proj-bottom-nav-design">
+            <div class="bottom-nav-arrows">
+                <a href="d-greatblueorange.html">
+                    <svg id="left-arrow" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1 copy 3</title><path d="M80,24.64l6.34,6.68L17.77,97.81H200V107H17.77l68.6,66.49L80,180.13,0,102.38Z"/></svg>                </a>
+                <a href="design.html" class="bottom-nav-text">Back to Design Page</a>
+                <a href="#">
+                    <svg id="right-arrow" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1</title><path d="M200,101.59l-80,77.75-6.34-6.68,68.6-66.5H0V97H182.23l-68.6-66.49L120,23.85Z"/></svg>
+                </a>
+            </div>
+        </div>
+
+        <footer>
+            <div class="footer-connect">
+                <h3>let's connect</h3>
+                <div class="footer-links"></div>
+                    <a href="#" class="footer-link">LinkedIn</a>
+                    <a href="#" class="footer-link">Email</a>
+                </div>
+            </div>
+        </footer>
     
     <script src="portfolio.js"></script>
 </body>
