--- a/design.html
+++ b/design.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="project">
-                <a href="#">
+                <a href="d-commemorating.html">
                     <img src="images/design/postcard4-cropped.png" class="project-image" alt="project three thumbnail">
                 </a>
                 <div class="project-info">
@@ -80,7 +80,7 @@
                         <h3 class="number">03.</h3>
                     </div>
                     <div class="project-text">
-                        <a href="#" class="project-name">Commemorating the Humanities</a>
+                        <a href="d-commemorating.html" class="project-name">Commemorating the Humanities</a>
                         <p class="project-subtitle">print & packaging design</p>
                     </div>
                 </div>
