portraits page and images

--- a/d-commemorating.html
+++ b/d-commemorating.html
@@ -30,12 +30,12 @@
 
     <header class="proj-header container">
         <div class="commem-header-group">
-            <div class="number-design">
+            <div class="number-type">
                 <h3 class="proj-number">03.</h3>
                 <div class="proj-heading-line"></div>
-                <h4 class="proj-heading-design">Design</h4>
+                <h4 class="proj-heading-type">Design</h4>
             </div>
-            <h1 class="proj-header-title">Commemorating <span class="proj-header-italic">the</span> Humanities</h1>
+            <h1 class="proj-header-title" id="commem-header-title">Commemorating <span class="proj-header-italic">the</span> Humanities</h1>
             <div class="proj-client-role">
                 <div class="client">
                     <h5 class="client-title">Client</h5>
@@ -49,18 +49,54 @@
         </div>
     </header>
 
-    <div class="hivisid-top-image-background">
-        <img src="images/design-project-images/commem/GalleryCatalog5.png" class="hivisid-top-image" alt="Gallery Catalog Spread">
+    <div class="commem-top-image-background top-image-margin-top">
+        <img src="images/design-project-images/commem/GalleryCatalog5.png" class="fullwidth-image" alt="Gallery Catalog Spread">
     </div>
 
-    <div class="commem-intro">
+    <div class="commem-intro top-margin">
         <p class="commem-intro-p">To celebrate the 20th anniversary of the gallery, the 30th year of the Institute for the Humanities, and the 200th birthday of the University of Michigan, the institute asked me to design a gallery catalog and a set of commemorative cards.</p>
     </div>
 
     <div class="commem-gallery-1">
-        <img src="images/design-project-images/commem/GalleryCatalog1.png" class="commem-img" id="GalleryCatalog1" alt="Gallery Catalog Spread">
-        <img src="images/design-project-images/commem/GalleryCatalog4.png" class="commem-img" id="GalleryCatalog4" alt="Gallery Catalog Spread">
-        <img src="images/design-project-images/commem/GalleryCatalog3.png" class="commem-img" id="GalleryCatalog3" alt="Gallery Catalog Spread">
+        <img src="images/design-project-images/commem/GalleryCatalog1.png" class="fullwidth-image" id="GalleryCatalog1" alt="Gallery Catalog Spread">
+        <img src="images/design-project-images/commem/GalleryCatalog4.png" class="fullwidth-image" id="GalleryCatalog4" alt="Gallery Catalog Spread">
+        <img src="images/design-project-images/commem/GalleryCatalog3.png" class="fullwidth-image" id="GalleryCatalog3" alt="Gallery Catalog Spread">
+    </div>
+
+    <div class="commem-catalog top-margin">
+        <p class="commem-catalog-p">The 44-page catalog that I subsequently designed is an important documentation of the development of the gallery and artist residency program at the institute, and an attestation to the challenging, diverse, and humanistic programming that the institute strives to promote. The design is rhythmic and uncluttered, setting a reliable tone and allowing the work to speak for itself. The thick matte cover is not fussy, textural, and inviting, while the inner gloss pages make the images of the work luminous and rich.</p>
+    </div>
+
+    <div class="commem-gallery-2">
+        <img src="images/design-project-images/commem/GalleryCatalog6.png" class="fullwidth-image" id="GalleryCatalog6" alt="Gallery Catalog Spread">
+        <img src="images/design-project-images/commem/GalleryCatalog7.png" class="fullwidth-image" id="GalleryCatalog7" alt="Gallery Catalog Spread">
+    </div>
+
+    <div class="commem-cards top-margin">
+        <p class="commem-cards-p">I designed this thirty-card box set to highlight a notable event from each year of the institute’s programming. The box’s design is elegant and utilitarian in nature; it unfolds by a tab system, and can be used as both a keepsake and a mailer. The use of Baskerville for type and minimal color creates a clean and classic design for both the box and the postcards, thereby emphasizing the image chosen to commemorate each year.</p>
+    </div>
+
+    <div class="commem-big-card-image">
+        <img src="images/design-project-images/commem/Postcard4.png" class="fullwidth-image" id="Postcard4" alt="Bicentennial Notecards">
+    </div>
+
+    <div class="commem-gallery-3 top-margin">
+        <img src="images/design-project-images/commem/Postcard1.png" class="fullwidth-image" id="Postcard1" alt="Bicentennial Notecards">
+        <img src="images/design-project-images/commem/Postcard2.png" class="fullwidth-image" id="Postcard2" alt="Bicentennial Notecards">
+        <img src="images/design-project-images/commem/Postcard3.png" class="fullwidth-image" id="Postcard3" alt="Bicentennial Notecards">
+        <img src="images/design-project-images/commem/Postcard6.png" class="fullwidth-image" id="Postcard6" alt="Bicentennial Notecards">
+        <img src="images/design-project-images/commem/Postcard5.png" class="fullwidth-image" id="Postcard5" alt="Bicentennial Notecards">
+    </div>
+
+    <div class="proj-bottom-nav-design">
+        <div class="bottom-nav-arrows">
+            <a href="d-hivisid.html">
+                <svg id="left-arrow" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1 copy 3</title><path d="M80,24.64l6.34,6.68L17.77,97.81H200V107H17.77l68.6,66.49L80,180.13,0,102.38Z"/></svg>                </a>
+            <a href="design.html" class="bottom-nav-text">Back to Design Page</a>
+            <a href="#">
+                <svg id="right-arrow" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1</title><path d="M200,101.59l-80,77.75-6.34-6.68,68.6-66.5H0V97H182.23l-68.6-66.49L120,23.85Z"/></svg>
+            </a>
+        </div>
     </div>
 
     <footer>
