--- a/d-greatblueorange.html
+++ b/d-greatblueorange.html
@@ -28,10 +28,10 @@
 
     <header class="proj-header">
         <div class="gbo-header-group">
-            <div class="number-design">
+            <div class="number-type">
                 <h3 class="proj-number">01.</h3>
                 <div class="proj-heading-line"></div>
-                <h4 class="proj-heading-design">Design</h4>
+                <h4 class="proj-heading-type">Design</h4>
             </div>
             <h1 class="proj-header-title">Prioritizing the Needs of People & Communities</h1>
             <div class="proj-client-role">
