--- a/d-hivisid.html
+++ b/d-hivisid.html
@@ -45,10 +45,10 @@
         
     <header class="proj-header container">
         <div class="hivisid-header-group">
-            <div class="number-design">
+            <div class="number-type">
                 <h3 class="proj-number">02.</h3>
                 <div class="proj-heading-line"></div>
-                <h4 class="proj-heading-design">Design</h4>
+                <h4 class="proj-heading-type">Design</h4>
             </div>
             <h1 class="proj-header-title">Giving <span class="proj-header-italic">the</span> Humanities a Visual Vocabulary</h1>
             <div class="proj-client-role">
@@ -64,8 +64,8 @@
         </div>
     </header>
 
-        <div class="hivisid-top-image-background">
-            <img src="images/design-project-images/hi-vis-id/Annual_Report_3.png" class="hivisid-top-image" alt="Annual Report Spread">
+        <div class="hivisid-top-image-background top-image-margin-top">
+            <img src="images/design-project-images/hi-vis-id/Annual_Report_3.png" class="fullwidth-image" alt="Annual Report Spread">
         </div>
 
         <div class="hivisid-challenge container">
@@ -177,17 +177,17 @@
 
         <div class="hivisid-gallery">
             <div class="hivisid-annualreport">
-                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_2.png" class="hivisid-pic" id="annual-report-2" alt="Annual Report Spread">
+                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_2.png" class="fullwidth-image" id="annual-report-2" alt="Annual Report Spread">
                 <div class="annual-report-covers">
-                    <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_1.png" class="hivisid-pic" id="annual-report-1" alt="Annual Report Cover">
-                    <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_6.png" class="hivisid-pic" id="annual-report-6" alt="Annual Report Back Cover">
+                    <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_1.png" class="fullwidth-image" id="annual-report-1" alt="Annual Report Cover">
+                    <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_6.png" class="fullwidth-image" id="annual-report-6" alt="Annual Report Back Cover">
                 </div>
-                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_4.png" class="hivisid-pic" id="annual-report-4" alt="Annual Report Spread">
-                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_5.png" class="hivisid-pic" id="annual-report-5" alt="Annual Report Spread">
+                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_4.png" class="fullwidth-image" id="annual-report-4" alt="Annual Report Spread">
+                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Annual_Report_5.png" class="fullwidth-image" id="annual-report-5" alt="Annual Report Spread">
             </div>
             <div class="hivisid-trifold">
-                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Trifold_front.png" class="hivisid-pic" id="trifold-front" alt="Trifold">
-                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Trifold_outside_unfolded.png" class="hivisid-pic" id="trifold-unfolded" alt="Trifold Unfolded">
+                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Trifold_front.png" class="fullwidth-image" id="trifold-front" alt="Trifold">
+                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Trifold_outside_unfolded.png" class="fullwidth-image" id="trifold-unfolded" alt="Trifold Unfolded">
             </div>
         </div>
 
@@ -200,8 +200,8 @@
 
         <div class="grey-background hivisid-logos-background">
             <div class="hivisid-logos">
-                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Humanities_and_Environments_Logo_black.jpg" class="hivisid-pic" id="yeartheme-black" alt="Year Theme Logo Black">
-                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Humanities_and_Environments_Logo_reverse.jpg" class="hivisid-pic" id="yeartheme-reverse" alt="Year Theme Logo Reverse">
+                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Humanities_and_Environments_Logo_black.jpg" class="fullwidth-image" id="yeartheme-black" alt="Year Theme Logo Black">
+                <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/Humanities_and_Environments_Logo_reverse.jpg" class="fullwidth-image" id="yeartheme-reverse" alt="Year Theme Logo Reverse">
             </div>
         </div>
 
@@ -210,10 +210,10 @@
         </div>
 
         <div class="hivisid-yeartheme-banners">
-            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners1_web.png" class="hivisid-banner" id="hivisid-banner-gold" alt="Year Theme Banner Gold">
-            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners2_web.png" class="hivisid-banner" id="hivisid-banner-teal" alt="Year Theme Banner Teal">
-            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners3_web.png" class="hivisid-banner" id="hivisid-banner-taupe" alt="Year Theme Banner Teal">
-            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners4_web.png" class="hivisid-banner" id="hivisid-banner-navy" alt="Year Theme Banner Teal">
+            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners1_web.png" class="fullwidth-image" id="hivisid-banner-gold" alt="Year Theme Banner Gold">
+            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners2_web.png" class="fullwidth-image" id="hivisid-banner-teal" alt="Year Theme Banner Teal">
+            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners3_web.png" class="fullwidth-image" id="hivisid-banner-taupe" alt="Year Theme Banner Teal">
+            <img src="/Users/ninabarraco/Dropbox/Website/PortfolioWebsite/images/design-project-images/hi-vis-id/2018_2019_Banners4_web.png" class="fullwidth-image" id="hivisid-banner-navy" alt="Year Theme Banner Teal">
         </div>
 
         <div class="proj-bottom-nav-design">
@@ -221,7 +221,7 @@
                 <a href="d-greatblueorange.html">
                     <svg id="left-arrow" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1 copy 3</title><path d="M80,24.64l6.34,6.68L17.77,97.81H200V107H17.77l68.6,66.49L80,180.13,0,102.38Z"/></svg>                </a>
                 <a href="design.html" class="bottom-nav-text">Back to Design Page</a>
-                <a href="#">
+                <a href="d-commemorating.html">
                     <svg id="right-arrow" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1</title><path d="M200,101.59l-80,77.75-6.34-6.68,68.6-66.5H0V97H182.23l-68.6-66.49L120,23.85Z"/></svg>
                 </a>
             </div>
