--- a/fine-art.html
+++ b/fine-art.html
@@ -41,7 +41,7 @@
             <div class="project-gallery">
     
                 <div class="project">
-                    <a href="#">
+                    <a href="fa-portraits.html">
                         <img src="images/fine-art/Allie_web.png" class="project-image" alt="project one thumbnail">
                     </a>
                     <div class="project-info">
@@ -50,7 +50,7 @@
                             <h3 class="number">01.</h3>
                         </div>
                         <div class="project-text">
-                            <a href="#" class="project-name">Portraits in Wood & Ink</a>
+                            <a href="fa-portraits.html" class="project-name">Portraits in Wood & Ink</a>
                         </div>
                     </div>
                 </div>
