startd leaves page

--- a/d-hivisid.html
+++ b/d-hivisid.html
@@ -68,7 +68,7 @@
             <img src="images/design-project-images/hi-vis-id/Annual_Report_3.png" class="fullwidth-image" alt="Annual Report Spread">
         </div>
 
-        <div class="hivisid-challenge container">
+        <div class="hivisid-challenge">
             <h2 class="proj-subtitle" id="hivisid-challenge-subtitle">The Challenge</h2>
             <div id="hivisid-challenge-p">
                 <p class="proj-body-copy">The Institute for the Humanities at the University of Michigan was struggling with presenting their programming in a cohesive way, and developing their name recognition around campus. In order to combat this problem, I developed a visual identity system that could be used on all primary institute publicity materials.</p>
@@ -76,7 +76,7 @@
         </div>
 
         <div class="grey-background">
-            <div class="hivisid-type container">
+            <div class="hivisid-type">
                 <h2 class="proj-subtitle" id="hivisid-type-subtitle"><span class="roman-numeral">I.</span> Type</h2>
                 <div id="hivisid-type-p">
                     <p class="proj-body-copy">Timeless Garamond juxtaposes with contemporary, direct Oswald.</p>
@@ -84,7 +84,7 @@
             </div>
         </div>
 
-        <div class="hivisid-typestudies container">
+        <div class="hivisid-typestudies">
             <div class="oswald">
                 <h2 class="oswald-subtitle">Oswald</h2>
                 <p class="oswald-alphabet">
@@ -123,7 +123,7 @@
         </div>
 
         <div class="grey-background">
-            <div class="hivisid-color container">
+            <div class="hivisid-color">
                 <h2 class="proj-subtitle" id="hivisid-color-subtitle"><span class="roman-numeral">II.</span> Color</h2>
                 <div id="hivisid-color-p">
                     <p class="proj-body-copy">Bright gold and teal come together with subtle taupe and navy to create a visual discourse that is both scholarly and engaging.</p>
@@ -131,7 +131,7 @@
             </div>
         </div>
 
-        <div class="hivisid-colorstudies container">
+        <div class="hivisid-colorstudies">
             <div class="squares">
                 <div class="gold-square-group">
                     <div class="gold-square hivisid-square"></div>
@@ -168,7 +168,7 @@
             </div>
         </div>
 
-        <div class="hivisid-smartdynamic container">
+        <div class="hivisid-smartdynamic">
             <h2 class="proj-subtitle" id="hivisid-smartdynamic-subtitle">Smart & Dynamic</h2>
             <div id="hivisid-smartdynamic-p">
                 <p class="proj-body-copy">The resulting system is flexible, and was applied to a number of materials, from the bi-annual trifold of event listings to the 2017-2018 annual report.</p>
@@ -191,7 +191,7 @@
             </div>
         </div>
 
-        <div class="hivisid-yeartheme container">
+        <div class="hivisid-yeartheme">
             <h2 class="proj-subtitle" id="hivisid-yeartheme-subtitle">For 2018-2019, we decided to extend this visual identity system to the institute’s annual year theme.</h2>
             <div id="hivisid-yeartheme-p">
                 <p class="proj-body-copy">Every year the Institute for the Humanities creates a year-long theme that much of the artistic, cultural, and intellectual happenings on campus revolve around. The 2018-2019 year was designated the Year of Humanities and Environments. In addition to a logo based off of this system, I designed a series of street pole banners. I utilized a set of illustrations to convey different notions of the human-environment relationship—built, natural, industry, and renewable energy.</p>
@@ -205,7 +205,7 @@
             </div>
         </div>
 
-        <div class="hivisid-yeartheme-2 container">
+        <div class="hivisid-yeartheme-2">
             <p class="proj-body-copy" id="hivisid-yeartheme-p2">Type and image interact seamlessly, two seemingly disparate elements that together create an environment of their own. In addition, these illustrations allude to various topics that the institute’s programming covered under this theme.</p>
         </div>
 
