--- a/fa-leaves.html
+++ b/fa-leaves.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Portraits in Wood and Ink</title>
+    <title>Leaf Abstractions</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="portfolio.css">
     <link rel="stylesheet" type="text/css" media="screen" href="fonts.css">
@@ -29,34 +29,25 @@
     </nav>
 
     <header class="proj-header container">
-        <div class="portraits-header-group">
+        <div class="leaves-header-group">
             <div class="number-type">
-                <h3 class="proj-number">01.</h3>
+                <h3 class="proj-number">02.</h3>
                 <div class="proj-heading-line"></div>
                 <h4 class="proj-heading-type">Fine Art</h4>
             </div>
-            <h1 class="proj-header-title">Portraits <span class="proj-header-italic">in</span> Wood <span class="proj-header-italic">and</span> Ink</h1>
-            <p class="proj-header-subtitle">Preserving memories and reflecting on identity.</p>
+            <h1 class="proj-header-title"><span class="proj-header-italic">Leaf</span> Abstractions</h1>
+            <p class="proj-header-subtitle">An exploration into form and abstraction through wood and ink.</p>
         </div>
     </header>
 
-    <div class="portraits-top-image-background top-image-margin-top">
-        <img src="images/fine-art-project-images/portraits/Allie_web.png" class="fullwidth-image" alt="Allie Portrait">
+    <div class="leaves-top-image-background top-image-margin-top">
+        <img src="images/fine-art-project-images/leaves/Leaf1.png" class="fullwidth-image" alt="Leaf1">
     </div>
 
-    <div class="portraits-intro top-margin">
-        <p class="portraits-intro-p">
-            This series of portraits are all woodblock prints, with the exception of Man, which was carved from a linoleum block and then printed onto a woodblock background. 
-            <br>
-            <br>
-            After drawing the images onto a woodblock, I carved Allie, Will, and Celina by hand using an engraving knife to lightly etch lines into the surface, going with the grain. This series explores notions of identity, memory, and impermanence, through the physical process of immortalizing these quiet moments in wood and ink.
+    <div class="leaves-intro top-margin">
+        <p class="leaves-intro-p">
+            In this series of prints, I explored the image of a leaf, and how I could take well-known object and abstract its form. Repetition and color were two methods of experimentation I implemented in particular. I desired to explore how we see things, and how something mundane or everyday could be transformed into something unusual. All of these prints are woodblock, with the first two printed on Hosho, and the rest on Okawara paper.
         </p>
-    </div>
-
-    <div class="portrait-gallery container">
-        <img src="images/fine-art-project-images/portraits/Will_web.png" class="fullwidth-image" id="Will" alt="Will Portrait">
-        <img src="images/fine-art-project-images/portraits/celina006_web.png" class="fullwidth-image" id="Celina" alt="Celina Portrait">
-        <img src="images/fine-art-project-images/portraits/Man_web.png" class="fullwidth-image" id="Man" alt="Man Portrait">
     </div>
 
     <div class="proj-bottom-nav">
@@ -64,7 +55,7 @@
             <a href="#">
                 <svg id="left-arrow" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1 copy 3</title><path d="M80,24.64l6.34,6.68L17.77,97.81H200V107H17.77l68.6,66.49L80,180.13,0,102.38Z"/></svg>                </a>
             <a href="fine-art.html" class="bottom-nav-text">Back to Fine Art Page</a>
-            <a href="fa-leaves.html">
+            <a href="#">
                 <svg id="right-arrow" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><title>Artboard 1</title><path d="M200,101.59l-80,77.75-6.34-6.68,68.6-66.5H0V97H182.23l-68.6-66.49L120,23.85Z"/></svg>
             </a>
         </div>
