--- a/fine-art.html
+++ b/fine-art.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <a href="#">
+                    <a href="fa-leaves.html">
                         <img src="images/fine-art/Leaf4.jpg" class="project-image" alt="project two thumbnail">
                     </a>
                     <div class="project-info">
@@ -64,7 +64,7 @@
                             <h3 class="number">02.</h3>
                         </div>
                         <div class="project-text">
-                            <a href="#" class="project-name">Leaf Abstractions</a>
+                            <a href="fa-leaves.html" class="project-name">Leaf Abstractions</a>
                         </div>
                     </div>
                 </div>
